# python-ai-builder

./: .gitignore  README.md  main.py  pyproject.toml
application/ports/driven/ai/: ai_repository_port.py
application/ports/driven/files/: files_repository_port.py
application/ports/driving/services/: builder_service_port.py  files_service_port.py
application/services/: builder_service_use_case.py  files_services_use_case.py
domain/: directory.py
driven/ai/chatgpt/: adapter.py  processor.py
driven/ai/chatgpt/prompts/android/: data.prompt  domain.prompt
driven/ai/chatgpt/prompts/ios/: data.prompt  domain.prompt
driven/files/: adapter.py
driving/api/: containers.py  router.py
driving/api/v1/builder/: adapter.py
driving/cli/: commands.py  main.py
infrastructure/di/builder/: container.py
infrastructure/di/files/: container.py
