[tool.poetry]
name = "AI Builder"
version = "1.0.0"
description = ""
authors = ["Fernando Salom <fdosalom.dev@gmail.com>"]
readme = "README.md"
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115"
sqlalchemy = "2.0.31"
alembic = "1.13.3"
pydantic = "2.9.2"
pydantic-settings = "^2.6"
dependency-injector = "^4.42"
openai = "^1.57"
uvicorn = "^0.31"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.2"
pytest-cov = "5.0.0"
pytest-mock = "3.14.0"
pytest-asyncio = "0.23.8"
pytest-xdist = "3.6.1"
pytest-faker = "2.0.0"
pytest-freezer = "0.4.8"
pyfakefs = "5.6.0"

[tool.poetry.group.ci.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
